--- a/001-Docker/full-stack-app/my-webpage-backend/package.json
+++ b/001-Docker/full-stack-app/my-webpage-backend/package.json
@@ -4,7 +4,8 @@
   "description": "Webpage that tells you how many times a page has been viewed.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Aryan Khurana",
   "license": "ISC",
