--- a/001-Docker/raspberry-pi-deployment/docker-compose.yml
+++ b/001-Docker/raspberry-pi-deployment/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.8"
 
 services:
   web:
-    image: aryank1511/my_repo:frontend:arm32v7
+    image: aryank1511/my_repo:frontend
     ports:
       - "3000:3000"
     restart: always
   api:
-    image: aryank1511/my_repo:backend:arm32v7
+    image: aryank1511/my_repo:backend
     ports:
       - "8000:8000"
     environment:
